--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="keyboard_bg_color">#bdbdbd</color>
     <color name="gray">#bdbdbd</color>
     <color name="white">#ffffff</color>
+    <color name="keyTextColor">#424242</color>
+    <color name="green">#00ff00</color>
+    <color name="red">#ff0000</color>
 </resources>
