--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
 
     <dimen name="key_height">60dp</dimen>
     <dimen name="keyboard_height">230dp</dimen>
+    <!--键盘-->
+    <dimen name="keyboard_horizontalGap">1px</dimen>
+    <dimen name="keyboard_verticalGap">1px</dimen>
+    <dimen name="key_height_double">120dp</dimen>
 </resources>
